# TDP005

./: ..giti.swp  ..gitignore.swp  .gitignore  README.md
Designspecifikation/: Designspecifikation.aux  Designspecifikation.fdb_latexmk  Designspecifikation.fls  Designspecifikation.out  Designspecifikation.tex  Designspecifikation.xdv  UML_diagram (copy).dia  UML_diagram (copy).dia.autosave  UML_diagram.dia
Game/: #sfml.cpp#  Big_Plane.cpp  Big_Plane.h  Bullet.cpp  Bullet.h  Bullet.h~  CMakeCache.txt  CMakeLists.txt  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  Level.cpp  Level.h  Makefile  Player.cpp  Player.h  Powerup.cpp  Powerup.h  Texture_manager.cpp  Texture_manager.h  World.cpp  World.h  cmake_install.cmake  common.h  game  game.cbp  game_state.cpp  game_state.h  level1.sw  main.cpp  main.cpp~  menu_state.cpp  menu_state.h  sfml  sfml.cpp  state.cpp  state.h  suppressions.txt
Game/Images/: Rating_stars.xcf  game_info.xcf  keyboard_guide.xcf
Game/Levels/: guide.txt  level1.sw  level11.sw  level2.sw
Kodgranskning/: Kodgranskning.aux  Kodgranskning.fdb_latexmk  Kodgranskning.fls  Kodgranskning.out  Kodgranskning.tex  Kodgranskning.xdv
Kravspecifikation/: Kravspecifikation.aux  Kravspecifikation.fdb_latexmk  Kravspecifikation.fls  Kravspecifikation.out  Kravspecifikation.tex  Kravspecifikation.toc  Kravspecifikation.xdv  Spelplan.xcf
Latex_template/: TDP005-mall.tex  TDP005mall.cls
Statusrapport/: rapport1.odt  rapport2.odt
gruppkontrakt/: gruppkontrakt.aux  gruppkontrakt.fdb_latexmk  gruppkontrakt.fls  gruppkontrakt.tex  gruppkontrakt.xdv
(+270 files in other folders)
